# thornhill

./: .clang-format  .gitignore  .gitmodules  .root  CMakeLists.txt  CODE_STYLE.md  CREDITS.md  LICENSE  Makefile  OldMakefile  README.md  linker.ld  main.asm  thornhill-build-config.json  thornhill-hot-toolchain.toml  version.cmake  wsl-vcxsrv-config.xlaunch
.VSCodeCounter/2021-08-07_17-25-15/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-08-07_17-25-43/: details.md  results.csv  results.md  results.txt
_utils/: init_bootloader.asm
arch/: memory.h
arch/x86_64/: include.cpp
arch/x86_64/gdt/: gdt.cpp  thornhill_gdt.h
arch/x86_64/interrupt/: interrupt.cpp
assets/: README.md
boot/: CMakeLists.txt  clock.h  config.h  data.c  handoff.h  kernel_entry.asm  lib.h  main.c  switch_to_32bit.asm
boot/32bit/: gdt.asm  print32.asm
boot/bios/: disk.asm  hexdump.asm  print.asm
boot/display/: logging.c  logging.h  logo.c  logo.h
boot/handoff/: handoff.c  handoff.h  handoff_memory.h  handoff_shared.h  memory.h
boot/handoff/memory/: memory.c  memory.h  memory_shared.h
boot/loader/: loader.c  loader.h  paging.c  paging.h
boot/utils/: bitmap.h  file.c  file.h  user.c  user.h  utils.c  utils.h
boot_old/: CMakeLists.txt  clock.h  lib.h  main.c
boot_old/handoff/: handoff.h
config/: system.h  version.h
cpu/x86_64/: interrupt_handler.s
cthorn/: string.hpp
drivers/: clock.cpp  clock.h  clock.hpp  graphics.cpp  graphics.h  graphics.hpp  io.cpp  io.hpp  screen.cpp  timer.cpp  timer.hpp  vga.h
drivers/hardware/: keyboard.cpp  keyboard.hpp  pit.cpp  pit.hpp  serial.cpp  serial.hpp  timer.cpp  timer.hpp
font/font8x8/: font8x8_basic.c  font8x8_basic.h  font8x8_basic.hpp
font/ssfn/: ssfn.h
kernel/: CMakeLists.txt  cmake_install.cmake  linker.ld  main.cpp  utils.cpp  utils.hpp
kernel/arch/: memory.h
kernel/arch/x86_64/: include.hpp
kernel/arch/x86_64/abi/: crti.s  crtn.s
kernel/arch/x86_64/gdt/: gdt.cpp  gdt.hpp  gdt_loader.s  thornhill_gdt.c  thornhill_gdt.h
kernel/arch/x86_64/interrupt/: interrupt.cpp  interrupt.hpp  interrupt_handler.s  thornhill_idt.c  thornhill_idt.h  thornhill_isr.c  thornhill_isr.h
kernel/descriptor/: thornhill_gdt.h
kernel/interrupt/: interrupt.cpp  thornhill_idt.h  thornhill_isr.h
kernel/keyboard/: keyboard.cpp  keyboard.h  keyboard.hpp
kernel/memory/: gdt.cpp  gdt_loader.s  manager.cpp  manager.hpp  paging.cpp  paging.hpp  physical.cpp  physical.hpp  thornhill_gdt.h  virtual.cpp  virtual.hpp
kernel/process/: process.hpp  thornhill_process.h
kernel/ski/: ski.cpp  ski.hpp
kernel/time/: timezone.cpp  timezone.hpp
lib/: posix.cpp  std.cpp  std.hpp  thornhill.cpp  thornhill.hpp
lib/posix/: printf.cpp  printf.hpp
lib/std/: printf.cpp  printf.hpp  string.cpp  string.hpp
lib/std/include/: algorithm  cmath  cstddef  cstring  math  type_traits
lib/std/src/: cstring.cpp  math.cpp  string.cpp
lib/thornhill/: kernel.cpp  kernel.hpp  kernel_debug.hpp  utils.cpp  utils.hpp
lib/thornhill/include/: enum  kernel  thornhill  utilities
lib/thornhill/src/: kernel.cpp  kernel_debug.hpp  utilities.cpp
scripts/: mkimg.sh  mkusb-linux.sh  mkusb-osx.sh  mkusb.ps1  mkusb.sh  populateimg.sh  startemulator.sh  starthotreload.sh
scripts/hotreload/: __main__.py  index.js  package-lock.json
scripts/hotreload/src/runners/: __init__.py  qemu.py
scripts/hotreload/src/utils/: build.py  elf.py  files.py  loaders.py  python_version.py  watcher.py
scripts/hotreload_old/: .gitignore  index.mjs  package.json  utilities.mjs
toolchain/: build-toolchain.sh
